--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,12 +12,14 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
     "emotion-normalize": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-icons": "^1.0.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "swr": "^1.1.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
