--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gravatar": "^1.8.3",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
     "emotion-normalize": "^11.0.1",
+    "gravatar": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-icons": "^1.0.8",
