--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "autosize": "^5.0.1",
     "axios": "^0.25.0",
     "emotion-normalize": "^11.0.1",
     "gravatar": "^1.8.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/autosize": "^4.0.1",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
