--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@loadable/component": "^5.15.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,13 +16,19 @@
     "@types/react-dom": "^17.0.11",
     "autosize": "^5.0.1",
     "axios": "^0.25.0",
+    "dayjs": "^1.10.7",
     "emotion-normalize": "^11.0.1",
     "gravatar": "^1.8.2",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-loading-icons": "^1.0.8",
+    "react-mentions": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
+    "regexify-string": "^1.0.17",
+    "socket.io-client": "^2.4.0",
     "swr": "^1.1.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
@@ -52,7 +59,11 @@
   },
   "devDependencies": {
     "@types/autosize": "^4.0.1",
+    "@types/loadable__component": "^5.13.4",
+    "@types/react-custom-scrollbars": "^4.0.10",
+    "@types/react-mentions": "^4.1.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io-client": "^1.4.35",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
